<resources>
    <string name="app_name">MedLite</string>
    <string name="text_map">Map</string>
    <string name="text_list">List</string>
    <string name="text_profile">Profile</string>
    <string name="text_history">History</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_exit">Exit</string>
    <string name="text_incoming">Incoming</string>
    <string name="empty_item_message">Empty</string>
</resources>
