<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_map"
        android:enabled="true"
        android:icon="@mipmap/map"
        android:title="@string/text_map"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_list"
        android:enabled="true"
        android:icon="@mipmap/list"
        android:title="@string/text_list"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_incoming"
        android:enabled="true"
        android:icon="@mipmap/incoming"
        android:title="@string/text_incoming"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_history"
        android:enabled="true"
        android:icon="@mipmap/history"
        android:title="@string/text_history"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@mipmap/profile"
        android:title="@string/text_profile"
        app:showAsAction="ifRoom" />
</menu>